# AdventOfCode

./: LICENSE  README.md
2022/go/2022/01/: day01.go
2022/go/2022/02/: day02_test.go  run-go.sh
2022/go/2022/03/: day03_test.go  run-go.sh
2022/go/2022/04/: day04.go  day04_test.go  run-go.sh
2022/go/2022/06/: run-go.sh
2022/go/2022/07/: day07.go  day07_test.go
2022/go/2022/09/: day09_test.go
2022/go/2022/10/: day10.go  day10_test.go  run-go.sh
2022/go/2022/12/: day12.go  day12_test.go  run-go.sh
2022/go/boilerplate/: day{day}.go  day{day}_test.go
2023/: .gitignore
2023/cpp/: CMakeLists.txt
2023/cpp/data/day01/: example03.txt
2023/cpp/data/day03/: example01.txt
2023/cpp/data/day07/: example02.txt
2023/cpp/hdr/: conversion.h  utils.h
2023/cpp/src/: conversion.cpp  day00.cpp  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day26.cpp  utils.cpp
go/: go.mod
go/2022/01/: day01_test.go  run-go.sh
go/2022/02/: day02.go
go/2022/03/: day03.go
go/2022/04/: day04.go
go/2022/05/: day05.go  day05_test.go  run-go.sh
go/2022/06/: day06.go  day06_test.go
go/2022/07/: run-go.sh
go/2022/09/: day09.go  run-go.sh
go/2022/25/: day25.go  day25_test.go  run-go.sh
